# photobooth-app

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pydeps  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  LICENSE.md  README.md  alembic.ini  boothupload.service  boothupload.sh  config.py  denoise.py  frame_server2mjpgHQoverlSrvFocus.py  imageserver.py  imageserver.service  install.py  openapi.json  package-lock.json  pyproject.toml  pyrightconfig.json  requirements-testing.txt  requirements.txt  start.bat  start.py  start.sh  start_profile.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  pull_request_template.md
.github/workflows/: benchmarks.yml  cicd.yml  ftptest.yml  pylint.yml  pyright.yml  pytest-rpi.yml  pytest.yml  pytests.yml  python-app.yml  python-test.yml  ruff.yml  tryout.yml  upload-coverage.yml
experiments/: Autofocus.py  CapturePicture.py  StreamMjpg.py  StreamMjpg1.py  StreamMjpg2.py  StreamMjpg2a.py  StreamMjpg2b.py  StreamMjpg3.py  controls_3.py  frame_server2.py  frame_server2mjpg.py  hqcapture1.py  picam2-booth.py  plot.py  videocapture2.py  videocapture3.py  videocapture4.py  videocapture6.py
experiments/focus/: Focuser.py  FocuserExample.py  v4l2_utils.py
experiments/motorized-focus demo python/: Autofocus.py  AutofocusTest.py  Focuser519.py
extras/: config.php  dl.php  error_template.php  functions.php  scripts.js  styles.css  translations.php  view_template.php
extras/explain-shareservice/: dl.php
extras/langs/: de.json  en.json  es.json  fr.json
extras/shareservice/: dl.php  nginx.shareservice.conf
lib/: Autofocus.py  AutofocusCallback.py  AutofocusCallbackFrameserver.py  CamStateMachine.py  ConfigService.py  ConfigSettings.py  Exif.py  Focuser.py  Focuser519.py  FocuserImx519.py  FocuserImxArdu64.py  FrameServer.py  FrameServerAbstract.py  FrameServerBackendPicam2.py  FrameServerBackendSimulate.py  ImageDb.py  ImageServerAbstract.py  ImageServerAddonAutofocus.py  ImageServerAddonAutofocusFocuser.py  ImageServerCmd.py  ImageServerDigicamcontrol.py  ImageServerGphoto2.py  ImageServerPicam2.py  ImageServerPicam2AddonLibcamAufocous.py  ImageServerSimulated.py  ImageServerWebcam.py  ImageServerWebcamCv2.py  ImageServerWebcamV4l.py  ImageServers.py  InfoLed.py  KeyboardService.py  LocationService.py  LoggingService.py  RepeatedTimer.py  Test_ImageServer.py  Test_ImageServerCmd.py  Test_ImageServerPicam2.py  Test_ImageServerSimulated.py
misc/archive/: boothupload.service  boothupload.sh  readme.txt
misc/installer/: imageserver.service  photobooth-app.service  readme.txt
old/: CapturePicture.py  RpiCamera.py  StreamMjpg.py  StreamMjpg1.py  StreamMjpg2c.py  StreamMjpg3.py  focus519.py  frame_server.py  frame_server2mjpgHQ.py  frame_server2mjpgHQoverl.py  frame_server2mjpgHQoverlSrv.py  picam2-boothcountdown.py  videocapture1.py  videocapture5.py
old/motorized-focus demo python/: FocuserExample.py
photobooth/: __init__.py  __main__.py  __version__.py  appconfig.py  application.py  cli.py  container.py  containers.py  containers_inject-example.py  database.py  models.py
photobooth/database/: database.py  models.py  types.py
photobooth/routers/: aquisition.py  auth_dependencies_bearer.py  config.py  debug.py  home.py  log.py  media.py  mediacollection.py  mediaprocessing.py  print.py  processing.py  sse.py  static.py  system.py
photobooth/services/: aquisition.py  aquisitionservice.py  base.py  baseservice.py  collection.py  containers.py  filtetransfer.py  filtetransferservice.py  gpio.py  gpioservice.py  information.py  informationservice.py  keyboardservice.py  logging.py  loggingservice.py  mediacollectionservice.py  mediaprocessingservice.py  (+13 more)
scripts/: available_webcams_cv2.py  available_webcams_v4l.py  print_sensor_modes.py  update_requirements.py
src/: CamStateMachine.py  ConfigSettings.py  Exif.py  ImageDb.py  ImageServerAbstract.py  ImageServerDigicamcontrol.py  ImageServerGphoto2.py  ImageServerPicam2.py  ImageServerPicam2AddonAutofocus.py  ImageServerPicam2AddonAutofocusFocuser.py  ImageServerPicam2AddonCustomAutofocus.py  ImageServerPicam2AddonLibcamAufocous.py  ImageServerPicam2AddonLibcamAutofocus.py  ImageServerSimulated.py  ImageServerWebcamCv2.py  ImageServerWebcamV4l.py  ImageServers.py  InfoLed.py  InformationService.py  KeyboardService.py  LocationService.py  LoggingService.py  StoppableThread.py  WledSerial.py  WledService.py  __init__.py  camstatemachine.py  configsettings.py  exif.py  imagedb.py  imageserverabstract.py  imageservergphoto2.py  imageserverpicam2.py  imageserverpicam2_addoncustomautofocus.py  imageserverpicam2_addonlibcamautofocus.py  imageserverpicam2_advancedaf.py  imageserverpicam2_libcamafcontinuous.py  imageserverpicam2_libcamafinterval.py  imageservers.py  imageserversimulated.py  (+24 more)
test/: test_ImageServerBackends.py
tests/: -delete-t-est_keyboardservice.py  TODO_imageservergphoto2.py  TODO_imageserverpicam2.py  TODO_imageserverv4l.py  api_http_aquisition_test.py  api_http_config_test.py  api_http_gallery_test.py  api_http_imageservers_test.py  api_http_mediaprocessing_test.py  api_http_processing_test.py  api_http_sse_test.py  api_http_static_test.py  api_http_system_test.py  api_keyboard_processing_test.py  backends_utils.py  benchmark_capture_test.py  benchmark_chromakey_test.py  benchmark_encodejpeg_test.py  benchmark_flip.py  benchmark_processing_test.py  benchmark_scalegif_test.py  benchmark_scalejpeg_test.py  encodebenchmark_test.py  http_api_test.py  image_utils.py  photoboothproject_api_test.py  test_ImageServerBackends.py  test_appconfig.py  test_application.py  test_aquisitionservice.py  test_backends.py  test_backends_allplatforms.py  test_backends_allplatforms_digicamcontrol_emulated.py  test_backends_allplatforms_disabled.py  test_backends_allplatforms_virtualcamera.py  test_backends_allplatforms_webcamcv2.py  test_backends_linux.py  test_backends_linux_gphoto2.py  test_backends_linux_rpi.py  test_backends_linux_webcamv4l.py  (+35 more)
tuningfiles/: arducam_64mp.json  imx519.json
web/: index.html
(+8849 files in other folders)
